v1.24, lib upgrades, doc, improve macOS support