@@ -2,8 +2,8 @@ import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
 
 plugins {
     id("java")
-    id("org.jetbrains.intellij") version "1.3.1" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
-    id("com.github.ben-manes.versions") version "0.41.0" // https://github.com/ben-manes/gradle-versions-plugin
+    id("org.jetbrains.intellij") version "1.4.0" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
+    id("com.github.ben-manes.versions") version "0.42.0" // https://github.com/ben-manes/gradle-versions-plugin
 }
 
 // Import variables from gradle.properties file
@@ -12,7 +12,6 @@ val pluginDownloadIdeaSources: String by project
 val pluginInstrumentPluginCode: String by project
 val pluginVersion: String by project
 val pluginJavaVersion: String by project
-val pluginEnableBuildSearchableOptions: String by project
 
 val inCI = System.getenv("CI") != null
 
@@ -72,11 +71,21 @@ tasks {
         }
     }
     runIde {
-        jvmArgs = listOf("-Xms768m", "-Xmx2048m", "--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+        jvmArgs("-Xms128m")
+        jvmArgs("-Xmx1024m")
+        jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+        // copy over some JVM args from IntelliJ
+        jvmArgs("-Dide.no.platform.update=true")
+        jvmArgs("-Djdk.attach.allowAttachSelf=true")
+        jvmArgs("-Djdk.module.illegalAccess.silent=true")
+        jvmArgs("-Dsun.io.useCanonCaches=false")
+        jvmArgs("-XX:+UseG1GC")
+        jvmArgs("-XX:CICompilerCount=2")
+        jvmArgs("-XX:ReservedCodeCacheSize=512m")
+        jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=50")
     }
     buildSearchableOptions {
-        enabled = pluginEnableBuildSearchableOptions.toBoolean()
-        jvmArgs = listOf("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+        enabled = false
     }
 }
 
